--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -15,176 +15,200 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <header>
-      <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-light">
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <a class="navbar-brand" href="index.html"
-            ><img class="header-logo"
-              src="./image/logo.png"
-              width="100%"
-              class="d-inline-block align-top"
-              alt=""
-          /></a>
-          <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item  border-blue"></span>
-
+    <header class="container">
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand" href="index.html"><img src="./image/logo.png" class="d-inline-block align-top header-logo" alt="" /></a>
+        <div class="flex-row-reverse collapse navbar-collapse" id="navbarTogglerDemo03">
+          <ul class="navbar-nav mt-2 mt-lg-0">
+            <li class="nav-item border-blue">
               <a class="nav-link" href="#">Главная</a>
             </li>
-            <li class="nav-item  border-purple">
+            <li class="nav-item border-purple">
               <a class="nav-link active" href="# ">Продукты</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link  border-green" href="#">Услуги</a>
+            <li class="nav-item border-green">
+              <a class="nav-link" href="#">Услуги</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link  border-carrot" href="#">О нас</a>
+            <li class="nav-item border-carrot">
+              <a class="nav-link" href="#">О нас</a>
             </li>
-            <li class="nav-item  border-orange">
+            <li class="nav-item border-orange">
               <a class="nav-link" href="#">Контакты</a>
             </li>
           </ul>
-          </div>
-        </nav>
-      </div>
+        </div>
+      </nav>
     </header>
     <main>
-    <section class="hero container">
-<ul class="list-search row">
-  <li class="link-heading " > <h1>Assistant Interface Debugger</h1></li>
-  <li class="link-heading ">
-
-    <button type="submit" class="btn-dovnload-price">
-    <svg class="svg-description-download">
-      <use href="./image/svg/sprite.svg#icon-description"></use>
-  </svg>
-   <p> Скачать наш прайс</p></button></li>
-  <li class="link-heading"> <input type="text" class="form-control" placeholder="Поиск по сайту"></li>
-</ul>
-<div class="interface d-flex row">
-<div class="interface-btn col-md-8 col-lg-7 col-xl-6">
-  <ul class="list-descriptor">
-  <li> <button  type="button" class="btn-description"><svg class="svg-description">
-    <use href="./image/svg/sprite.svg#icon-description"></use>
-</svg><span>Описание продукта</span>
-<svg class="svg-arrow">
-  <use href="./image/svg/sprite.svg#icon-arrow"></use>
-</svg></button>
-</li>
-  <li>
-    <ul class="d-flex panel-get-description">
-      <li>
-         <ul>
-          <li><button  type="button"  class="btn-download">
-            <svg class="svg-example">
-              <use href="./image/svg/sprite.svg#icon-example"></use>
-          </svg>
-            <p>
-            Скачать
-            <span>
-          Докум-ция, программы и драйверы</span>
-        </p></button> </li>
-          <li><button  type="button" class="btn-example">
-            <svg class="svg-description">
-              <use href="./image/svg/sprite.svg#icon-gridview"></use>
-          </svg>
-            <p>Примеры<span>C# API</span></p></button> </li>
-         </ul>
-    </li>
-      <li><button  type="button" class="btn-video">
-        <svg class="svg-video">
-          <use href="./image/svg/sprite.svg#icon-video"></use>
-      </svg>
-        <p>Видео<span>Смотреть</span></p>
-        <svg class="svg-video-arrow">
-          <use href="./image/svg/sprite.svg#icon-arrow"></use>
-        </svg></button> </li>
-    </ul>
-  </li>
-</ul>
-</div>
-<div class="block-img col-md-12 col-lg-5  col-xl-6">
-  <img class="img-biovoid" src="./image/biovoidImg.jpg" alt="photo of the device Biovoid">
-</div>
-</div>
-    </section>
-    <section class="product-description container">
-      <h2>Описание продукта</h2>
-     <p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил без заметных изменений пять веков, но и перешагнул в электронный дизайн. Его популяризации в новое время послужили публикация листов Letraset с образцами Lorem Ipsum в 60-х годах и, в более недавнее время, программы электронной вёрстки типа Aldus PageMaker, в шаблонах которых используется Lorem Ipsum.
-</p>
-<p>
-      Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. Lorem Ipsum используют потому, что тот обеспечивает более или менее стандартное заполнение шаблона, а также реальное распределение букв и пробелов в абзацах, которое не получается при простой дубликации "Здесь ваш текст.. Здесь ваш текст.. Здесь ваш текст.." Многие программы электронной вёрстки и редакторы HTML используют Lorem Ipsum в качестве текста по умолчанию, так что поиск по ключевым словам "lorem ipsum" сразу показывает, как много веб-страниц всё ещё дожидаются своего настоящего рождения. За прошедшие годы текст Lorem Ipsum получил много версий. Некоторые версии появились по ошибке, некоторые - намеренно (например, юмористические варианты).
-     <br>
-      Многие думают, что Lorem Ipsum - взятый с потолка псевдо-латинский набор слов, но это не совсем так.
-     </p>
-    </section>
-    <section class="peculiarities-product container">
-      <ul class="list-product-description">
-        <li >
-          <div>
-            <h3>High-Speed CAN</h3>
-            <p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил без заметных изменений пять веков, но и перешагнул в электронный дизайн.</p>
+      <section class="hero container">
+        <div class="list-search row">
+          <div class="col-xl-6"><h1>Assistant Interface Debugger</h1></div>
+          <div class="col-xl-6 d-flex justify-content-between">
+            <a href="#" class="btn-dovnload-price">
+              <svg class="svg-description-download">
+                <use href="./image/svg/sprite.svg#icon-description"></use>
+              </svg>
+              <span> Скачать наш прайс</span>
+            </a>
+            <input type="text" class="form-control" placeholder="Поиск по сайту" />
           </div>
-        </li>
-        <li>
-          <div>
-            <h3>I2C</h3>
-            <p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил без заметных изменений пять веков, но и перешагнул в электронный дизайн.</p>
-          </div>
-        </li>
-        <li>
-          <div>
-            <h3>UART/RS232</h3>
-            <p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил без заметных изменений пять веков, но и перешагнул в электронный дизайн.</p>
-          </div>
-        </li>
-      </ul>
+        </div>
 
-    </section>
-  </main>
-    <footer class="container ">
-<div class=" d-flex info-message">
-  <svg class="paperplane">
-    <use href="./image/svg/sprite.svg#icon-paperplane"></use>
-</svg>
-  <p>Форма обратной связи<br>
-    разработка, модификация или просто вопросы по модулю...</p>
-</div>
-        <form class="d-flex form-footer">
-
-          <div class="input-form">
-             <div class="form-group-input">
+        <div class="row mt-2">
+          <div class="col-xl-6">
+            <div>
+              <button type="button" class="btn-description mb-xs-0 mb-sm-0">
+                <svg class="svg-description">
+                  <use href="./image/svg/sprite.svg#icon-description"></use>
+                </svg>
+                <span>Описание продукта</span>
+                <svg class="svg-arrow">
+                  <use href="./image/svg/sprite.svg#icon-arrow"></use>
+                </svg>
+              </button>
+            </div>
+            <div class="d-xl-flex justify-content-between d-lg-flex d-md-flex mt-5">
+              <div>
+                <div>
+                  <button type="button" class="btn-download mb-xs-0 mb-sm-0">
+                    <svg class="svg-example">
+                      <use href="./image/svg/sprite.svg#icon-example"></use>
+                    </svg>
+                    <span>
+                      Скачать
+                      <span> Докум-ция, программы и драйверы</span>
+                    </span>
+                  </button>
+                </div>
+                <div class="mt-5">
+                  <button type="button" class="btn-example">
+                    <svg class="svg-description">
+                      <use href="./image/svg/sprite.svg#icon-gridview"></use>
+                    </svg>
+                    <span>Примеры<span>C# API</span></span>
+                  </button>
+                </div>
+              </div>
+              <div class="">
+                <button type="button" class="btn-video">
+                  <svg class="svg-video">
+                    <use href="./image/svg/sprite.svg#icon-video"></use>
+                  </svg>
+                  <span>Видео<span>Смотреть</span></span>
+                  <svg class="svg-video-arrow">
+                    <use href="./image/svg/sprite.svg#icon-arrow"></use>
+                  </svg>
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-6">
+            <div class="block-img">
+              <img class="mx-auto rounded img-fluid" src="./image/biovoidImg.jpg" alt="photo of the device Biovoid" />
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="product-description container">
+        <h2 class="mt-4">Описание продукта</h2>
+        <p>
+          Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный
+          печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил без заметных изменений пять веков, но и
+          перешагнул в электронный дизайн. Его популяризации в новое время послужили публикация листов Letraset с образцами Lorem Ipsum в 60-х годах и, в более недавнее время, программы электронной
+          вёрстки типа Aldus PageMaker, в шаблонах которых используется Lorem Ipsum.
+        </p>
+        <p>
+          Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. Lorem Ipsum используют потому, что тот обеспечивает более или менее стандартное заполнение шаблона,
+          а также реальное распределение букв и пробелов в абзацах, которое не получается при простой дубликации "Здесь ваш текст.. Здесь ваш текст.. Здесь ваш текст.." Многие программы электронной
+          вёрстки и редакторы HTML используют Lorem Ipsum в качестве текста по умолчанию, так что поиск по ключевым словам "lorem ipsum" сразу показывает, как много веб-страниц всё ещё дожидаются
+          своего настоящего рождения. За прошедшие годы текст Lorem Ipsum получил много версий. Некоторые версии появились по ошибке, некоторые - намеренно (например, юмористические варианты).
+          <br />
+          Многие думают, что Lorem Ipsum - взятый с потолка псевдо-латинский набор слов, но это не совсем так.
+        </p>
+      </section>
+      <section class="peculiarities-product container">
+        <ul class="list-product-description pl-0 mt-5">
+          <li>
+            <div>
+              <h3 class="mb-0">High-Speed CAN</h3>
+              <p class="mb-0">
+                Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий
+                безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил без заметных изменений пять
+                веков, но и перешагнул в электронный дизайн.
+              </p>
+            </div>
+          </li>
+          <li class="mt-5">
+            <div>
+              <h3 class="mb-0">I2C</h3>
+              <p class="mb-0">
+                Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий
+                безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил без заметных изменений пять
+                веков, но и перешагнул в электронный дизайн.
+              </p>
+            </div>
+          </li>
+          <li class="mt-5">
+            <div>
+              <h3 class="mb-0">UART/RS232</h3>
+              <p class="mb-0">
+                Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий
+                безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил без заметных изменений пять
+                веков, но и перешагнул в электронный дизайн.
+              </p>
+            </div>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer class="container">
+      <div class="d-flex info-message mt-5">
+        <svg class="paperplane">
+          <use href="./image/svg/sprite.svg#icon-paperplane"></use>
+        </svg>
+        <p>
+          Форма обратной связи<br />
+          разработка, модификация или просто вопросы по модулю...
+        </p>
+      </div>
+      <form class="d-flex form-footer">
+        <div class="input-form">
+          <div class="form-group-input">
             <select id="inputState" class="form-control-input">
               <option selected>Выберите тип обращения</option>
               <option>...</option>
             </select>
           </div>
           <div class="form-group-input">
-            <input type="text" class="form-control-input" id="inlineFormInput" placeholder="Имя*">
+            <input type="text" class="form-control-input" placeholder="Имя*" />
           </div>
 
-            <div class="form-group-input">
-              <input type="email" class="form-control-input" id="inlineFormInput" placeholder="E-mail*">
-            </div>
+          <div class="form-group-input">
+            <input type="email" class="form-control-input" placeholder="E-mail*" />
+          </div>
 
-            <div class="form-group-input">
-              <input type="phone" class="form-control-input" id="inlineFormInput" placeholder="Телефон">
-            </div>
+          <div class="form-group-input">
+            <input type="tel" class="form-control-input" placeholder="Телефон" />
           </div>
-            <div  class="right-side-of-the-form">
-              <div class="form-group">
-                <textarea class="form-control-textarea" id="exampleFormControlTextarea1" rows="3" placeholder="Сообщение*"></textarea>
-              </div>
-              <button type="button" class="btn btn-send">Отправить</button>
+        </div>
+        <div class="right-side-of-the-form">
+          <div class="form-group">
+            <textarea class="form-control-textarea" id="exampleFormControlTextarea1" rows="3" placeholder="Сообщение*"></textarea>
           </div>
-        </form>
-<div>© 2012-2013 Biovoid. Все права защищены.</div>
+          <button type="button" class="btn btn-send">Отправить</button>
+        </div>
+      </form>
+      <div class="mt-5">© 2012-2013 Biovoid. Все права защищены.</div>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
