--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                   <svg class="svg-video">
                     <use href="./image/svg/sprite.svg#icon-video"></use>
                   </svg>
-                  <span>Видео</br>Смотреть</span>
+                  <span>Видео<span class="ml-0">Смотреть</span></span>
                   <svg class="svg-video-arrow">
                     <use href="./image/svg/sprite.svg#icon-arrow"></use>
                   </svg>
